# taggix

./: Cargo.toml  yyb school miku.mtl
blender source/: yyb bake r.mtl
res/: cube.mtl
res/yyb_school_miku_pose/: baked.vmd  sm pose.vpd  yyb bake r.mtl
src/: camera.rs  create_obj.rs  framework.rs  instance.rs  main.rs  model.rs  renderer.rs  texture.rs  vertex.rs
src/shader/: shader.wgsl
