[package]
name = "taggix"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
obj-rs = "0.6"
async-executor = "1.0"
byte-slice-cast = "1.0.0"
bytemuck = { version = "1.4", features = ["derive"] }

[dependencies.wgt]
package = "wgpu-types"
version = "0.11"
