[package]
name = "taggix"
version = "0.1.0"
edition = "2018"
resolver="2"

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
byte-slice-cast = "1.0.0"
bytemuck = { version = "1.4", features = ["derive"] }
rayon = "1.4"
tobj = "3.0"
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
